# assume-break

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample_plan.txt  streamlit_app.py
.streamlit/: secrets.toml.example
src/assume_break/: __init__.py  cli.py  config.py  graph.py  report.py  state.py
src/assume_break/agents/: __init__.py  adversary.py  extractor.py  judge.py  llm.py  proponent.py
src/assume_break/reality/: __init__.py  database.py  engine.py
tests/: test_agents.py  test_graph.py  test_reality_engine.py
