[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assume-break"
version = "1.0.0"
description = "Adversarial business plan stress-testing against Zambian economic realities"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "langgraph>=0.2.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
assume-break = "assume_break.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
